# stm-model

./: README.md  stm-model-test.tix  stm-model.cabal
papers/JLAMP/: paper.aux  paper.bbl  paper.blg  paper.lhs  paper.out  paper.tex  references.bib
papers/JLAMP/ecrc-procs/: README
papers/fundam/: fundam.cls  paper.aux  paper.bbl  paper.blg  paper.lhs  paper.out  paper.tex  references.bib
papers/fundam/auto/: references.el
papers/fundam/model/: citations.bib  figuide.tex  fundam.bst
papers/haskell17/: answers.txt  paper.aux  paper.bbl  paper.blg  paper.lhs  paper.out  paper.tex  review-final.txt  reviews.txt
papers/haskell17/old/: jfp.aux  jfp.bbl  jfp.blg  jfp.out  jfp.tex  jfp.toc  makefile  references.bib
papers/sblp2018/: paper.aux  paper.bbl  paper.blg  paper.lhs  paper.out  paper.tex  paper_1.lhs  references.bib
papers/sblp2018/auto/: references.el
report/: makefile  report.aux  report.out  report.tex  report.toc
report/auto/: report.el
src/STM/Basic/: Definitions.hs
src/STM/Compiler/: VMCompiler.hs
src/STM/Safety/: Basics.hs  Markability.hs  Opacity.hs
src/STM/Semantics/: Basics.hs  STMHaskellSemantics.hs  TL2Semantics.hs
src/STM/Syntax/: Syntax.hs
src/STM/VM/: Instruction.hs  VMSemantics.hs
talk/: makefile  slides.aux  slides.lhs  slides.nav  slides.out  slides.ptb  slides.tex  slides.toc
test/: Spec.hs
