name:                stm-model
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/stm-model#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:       STM.Basic.Definitions
                       , STM.Compiler.VMCompiler
                       , STM.Safety.Basics
                       , STM.Safety.Opacity
                       , STM.Safety.Markability
                       , STM.Syntax.Syntax
                       , STM.Semantics.Basics
                       , STM.Semantics.STMHaskellSemantics
                       , STM.Semantics.TL2Semantics
  build-depends:         base >= 4.7 && < 5
                       , mtl
                       , containers
  default-language:    Haskell2010

executable stm-model-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , stm-model
  default-language:    Haskell2010

test-suite stm-model-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , tasty
                     , tasty-hunit
                     , tasty-quickcheck
                     , HUnit
                     , QuickCheck
                     , stm-model
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/stm-model
